--- a/css/core/style.css
+++ b/css/core/style.css
@@ -82,6 +82,17 @@ input[type=submit]{
 	font-family: 'Francois One', sans-serif;
 }
 
+#main-feature{
+	position: absolute;
+	top: 50;
+	left: 0;
+	width: 100%
+}
+
+#main-feature *{
+	width: 100%
+}
+
 .areas-of-focus{
 	background: #d4d4d4;
 }
