--- a/css/core/style.css
+++ b/css/core/style.css
@@ -69,12 +69,12 @@ html{
 	font: 14px Arial, sans-serif;
 }
 
-input{
+input, select{
 	background: #efefef;
 	border: none;
 	border-radius: 2px;
 	display: block;
-	height: 20px;
+	height: 30px;
 	width: 100%;
 	margin-bottom: 10px;
 }
@@ -83,6 +83,7 @@ input[type=submit]{
 	background: #c64f12;
 	color: #fff;
 	font-family: 'Francois One', sans-serif;
+	margin: 20px 0;
 }
 
 #main-feature{
@@ -120,13 +121,32 @@ input[type=submit]{
 
 .degree-name{
 	background-color: rgba(26,26,26,0.8);
-	height: 73px;
 	width: 287px;
+}
+
+.degree-name p{
+	margin: 0 30px 15px 30px;
+	font: 18.06px Arial, Helvetica, sans-serif bold;
+	color: #fff;
+}
+
+.degree-name span{
+	font-style: italic;
+}
+
+.degree-name h1{
+	color: #fff;
+	font: 22.07px Arial, Helvetica, sans-serif bold;
+	margin: 15px 30px 0 30px;
 }
 
 .degree-description h2{
 	color: #444444;
 	font: 30.04px 'Open Sans', sans-serif;
+}
+
+.degree-description p{
+	margin-bottom: 20px;
 }
 
 .online-experience{
@@ -142,12 +162,19 @@ input[type=submit]{
 	padding: 20px 0;
 }
 
+
 .request-info h2, .request-info p, .request-info form{
 	margin: 0 20px;
 }
 
+.request-info h2{
+	display: block;
+	margin-bottom: 20px;
+}
 .request-info p{
 	font-family: 'Verdana', sans-serif;
+	font-size: 10px;
+	line-height: 1.2em;
 }
 
 .request-info h2, .request-info input[type=submit]{
