--- a/css/core/style.css
+++ b/css/core/style.css
@@ -115,7 +115,7 @@ select {
 	margin-top: -30px;
 }
 
-.areas-of-focus h3{
+.areas-of-focus h3 {
 	color: #444;
 	font-size: 20px;
 	font-family: 'Open Sans', sans-serif;
@@ -138,7 +138,7 @@ select {
 	padding-bottom: 60px;
 }
 
-.areas-of-focus-heading{
+.areas-of-focus-heading {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 24px;
 	font-weight: bold;
@@ -176,7 +176,7 @@ select {
 	margin-bottom: 20px;
 }
 
-.degree-overview{
+.degree-overview {
 	margin-bottom: 50px;
 }
 
@@ -216,29 +216,38 @@ select {
 	margin-bottom: 0;
 }
 
-#slidr-ul{
+#slidr-ul {
 	width: 100%;
 }
 
 /*SLIDR OVERRIDES*/
 aside[id="slidr-ul-breadcrumbs"] {
-  right: 50% !important;
-  margin-right: -41px !important;
+	right: 50% !important;
+	margin-right: -100px !important;
+	margin-bottom: -40px !important;
 }
 
 aside[id="slidr-ul-breadcrumbs"] .slidr-breadcrumbs li {
-  width: 10px !important;
-  height: 10px !important;
-  margin: 15px !important;
+	width: 10px !important;
+	height: 10px !important;
+	margin: 15px !important;
 }
 
 aside[id="slidr-ul-breadcrumbs"] .slidr-breadcrumbs li.normal {
-  border: none !important;
-  background-color: #fff !important;
+	border: none !important;
+	background-color: #fff !important;
 }
 
 aside[id="slidr-ul-breadcrumbs"] .slidr-breadcrumbs li.active {
-  background-color: #595959 !important;
+	background-color: #595959 !important;
 }
 
-/*Remove Slider When Working with Mobile. Easier to Scroll up and down than user a slider on mobile*/
+@media all and (max-width: 767px) {
+	.areas-of-focus .one-third {
+		margin-top: 0px;
+	}
+	
+	.areas-of-focus .one-third.alpha {
+		margin-top: -30px;
+	}
+}
