--- a/css/core/style.css
+++ b/css/core/style.css
@@ -242,11 +242,34 @@ aside[id="slidr-ul-breadcrumbs"] .slidr-breadcrumbs li.active {
 	background-color: #595959 !important;
 }
 
+/*Hide all arrows within a single controller.*/
+aside[id="slidr-ul-control"] .slidr-control:after {
+	border: transparent !important;
+}
+
+aside[id="slidr-ul-control"] .slidr-control.right, aside[id="slidr-ul-control"] .slidr-control.left {
+	width: 30px !important;
+	height: 70px !important;
+	top: 50% !important;
+	margin-top: -25px !important;
+}
+
+aside[id="slidr-ul-control"] .slidr-control.right {
+	right: -25px !important;
+	background: url('/img/right-arrow.png') no-repeat;
+}
+
+aside[id="slidr-ul-control"] .slidr-control.left {
+	left: -25px !important;
+	background: url('/img/left-arrow.png') no-repeat;
+}
+
+/*MEDIA QUERIES*/
 @media all and (max-width: 767px) {
 	.areas-of-focus .one-third {
 		margin-top: 0px;
 	}
-	
+
 	.areas-of-focus .one-third.alpha {
 		margin-top: -30px;
 	}
