--- a/css/core/style.css
+++ b/css/core/style.css
@@ -93,6 +93,7 @@ label {
 select {
 	background: url('/img/select-arrow.png') no-repeat right #efefef;
 	line-height: 1;
+	-moz-appearance: none;
 	-webkit-appearance: none;
 }
 
